--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stacey",
+  "name": "lunchbot",
   "version": "0.0.0",
   "private": true,
   "author": "Sander Tuin <git@sander.garden>",
