--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "author": "Sander Tuin <git@sander.garden>",
-  "description": "The PA you never had",
+  "description": "Lunch for paypro @ feelgood",
   "dependencies": {
     "hubot": "^2.19.0",
-    "hubot-help": "^0.2.0",
     "hubot-heroku-keepalive": "^1.0.2",
-    "hubot-lunchbot": "0.0.4",
     "hubot-redis-brain": "0.0.3",
     "hubot-scripts": "^2.17.2",
-    "hubot-slack": "^4.3.4"
+    "hubot-slack": "^4.3.4",
+    "cron": "1.0.5",
+    "time": "0.11.4"
   },
   "engines": {
     "node": "0.10.x"
